# parser_ozon

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg
config/: .env.template
docker/django/: Dockerfile
selenium/: Dockerfile
server/: celery.py  urls.py
server/apps/api/: urls.py
server/apps/api/serializers/: __init__.py  products_serializer.py
server/apps/api/views/: __init__.py  products_viewset.py
server/apps/parser/: admin.py  tasks.py
server/apps/parser/migrations/: 0001_initial.py  0002_alter_productsmodel_options.py
server/apps/parser/models/: __init__.py  products_model.py  sessionparsing_model.py
server/apps/parser/utils/: __init__.py  parse_products_seller.py
server/apps/telegram/: bot.py
server/apps/telegram/management/commands/: start_polling.py
server/apps/utils/: send_notification_tg.py
server/settings/: __init__.py
server/settings/components/: common.py  querycount.py
server/settings/environments/: development.py
server/settings/services/: celery.py
tests/: conftest.py
